--- a/index.html
+++ b/index.html
@@ -4,50 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AR Cube</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+
+    <!-- Подключаем mindAR -->
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.3/dist/mindar-image-three.prod.js"></script>
+
+    <style>
+        body { margin: 0; overflow: hidden; }
+        #startButton {
+            position: absolute;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            padding: 10px 20px;
+            font-size: 18px;
+            z-index: 10;
+        }
+    </style>
 </head>
-<body style="margin: 0; overflow: hidden;">
-    <button id="startAR" style="position: absolute; top: 20px; left: 50%; transform: translateX(-50%); padding: 10px 20px; font-size: 18px; z-index: 10;">Запустить AR</button>
+<body>
+    <button id="startButton">Запустить AR</button>
     
     <script>
-        let scene, camera, renderer, cube;
+        document.getElementById('startButton').addEventListener('click', async () => {
+            document.getElementById('startButton').style.display = 'none';
 
-        async function initAR() {
-            if (navigator.xr && await navigator.xr.isSessionSupported('immersive-ar')) {
-                document.getElementById('startAR').style.display = 'none';
+            const mindarThree = new window.MINDAR.IMAGE.MindARThree({
+                container: document.body,
+                imageTargetSrc: "https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js/examples/assets/card-example/card.mind",
+            });
 
-                scene = new THREE.Scene();
-                camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.01, 20);
-                renderer = new THREE.WebGLRenderer({ alpha: true });
-                renderer.setSize(window.innerWidth, window.innerHeight);
-                renderer.xr.enabled = true;
-                document.body.appendChild(renderer.domElement);
+            const { renderer, scene, camera } = mindarThree;
+            const anchor = mindarThree.addAnchor(0);
 
-                // Добавляем белый куб
-                const geometry = new THREE.BoxGeometry(0.2, 0.2, 0.2);
-                const material = new THREE.MeshBasicMaterial({ color: 0xffffff });
-                cube = new THREE.Mesh(geometry, material);
-                cube.position.set(0, 0, -1); // Перед камерой
-                scene.add(cube);
+            const geometry = new THREE.BoxGeometry(0.2, 0.2, 0.2);
+            const material = new THREE.MeshBasicMaterial({ color: 0xffffff });
+            const cube = new THREE.Mesh(geometry, material);
+            anchor.group.add(cube);
 
-                // Запуск WebXR AR-сессии
-                const session = await navigator.xr.requestSession('immersive-ar', { requiredFeatures: ['local-floor'] });
-                renderer.xr.setSession(session);
-
-                function animate() {
-                    renderer.setAnimationLoop(() => {
-                        cube.rotation.y += 0.01;
-                        renderer.render(scene, camera);
-                    });
-                }
-
-                animate();
-            } else {
-                alert('Ваше устройство не поддерживает WebXR');
-            }
-        }
-
-        document.getElementById('startAR').addEventListener('click', initAR);
+            await mindarThree.start();
+            renderer.setAnimationLoop(() => renderer.render(scene, camera));
+        });
     </script>
 </body>
 </html>
