--- a/index.html
+++ b/index.html
@@ -4,46 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AR Cube</title>
-
-    <!-- Подключаем mindAR -->
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.3/dist/mindar-image-three.prod.js"></script>
-
-    <style>
-        body { margin: 0; overflow: hidden; }
-        #startButton {
-            position: absolute;
-            top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            padding: 10px 20px;
-            font-size: 18px;
-            z-index: 10;
-        }
-    </style>
-</head>
-<body>
-    <button id="startButton">Запустить AR</button>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@webxr-polyfill/webxr-polyfill.min.js"></script>
     <script>
-        document.getElementById('startButton').addEventListener('click', async () => {
-            document.getElementById('startButton').style.display = 'none';
+        let scene, camera, renderer;
 
-            const mindarThree = new window.MINDAR.IMAGE.MindARThree({
-                container: document.body,
-                imageTargetSrc: "https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js/examples/assets/card-example/card.mind",
-            });
+        function init() {
+            scene = new THREE.Scene();
+            camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.1, 10);
+            renderer = new THREE.WebGLRenderer({ alpha: true });
+            renderer.setSize(window.innerWidth, window.innerHeight);
+            document.body.appendChild(renderer.domElement);
 
-            const { renderer, scene, camera } = mindarThree;
-            const anchor = mindarThree.addAnchor(0);
+            const light = new THREE.HemisphereLight(0xffffff, 0xbbbbff, 1);
+            scene.add(light);
 
             const geometry = new THREE.BoxGeometry(0.2, 0.2, 0.2);
-            const material = new THREE.MeshBasicMaterial({ color: 0xffffff });
+            const material = new THREE.MeshStandardMaterial({ color: 0xff0000 });
             const cube = new THREE.Mesh(geometry, material);
-            anchor.group.add(cube);
+            cube.position.set(0, 0, -1);
+            scene.add(cube);
 
-            await mindarThree.start();
-            renderer.setAnimationLoop(() => renderer.render(scene, camera));
+            if (navigator.xr) {
+                navigator.xr.requestSession('immersive-ar', { requiredFeatures: ['hit-test'] }).then(session => {
+                    renderer.xr.enabled = true;
+                    renderer.xr.setSession(session);
+                });
+            }
+        }
+
+        function animate() {
+            renderer.setAnimationLoop(() => {
+                renderer.render(scene, camera);
+            });
+        }
+
+        window.addEventListener('load', () => {
+            init();
+            animate();
         });
     </script>
+</head>
+<body>
 </body>
 </html>
